<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SingleProductFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:layout_marginTop="260dp"
        android:id="@+id/SliderDots"
        android:layout_below="@+id/viewPager"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="125dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EGG"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/black_50"/>


    <ScrollView
        android:layout_marginTop="280dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            app:layout_constraintCircleRadius="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:text="@string/product"
            app:cornerRadius="50pt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/foodDelivery"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            app:layout_constraintCircleRadius="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/food_delivery"
            app:cornerRadius="50pt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            app:layout_constraintCircleRadius="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            app:cornerRadius="50pt"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_upload"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp"
            android:layout_width="90dp"
            android:layout_height="78dp"
            android:layout_marginStart="28dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/colorPrimary">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_add_24"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/print"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            app:layout_constraintCircleRadius="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/print_setting"
            app:cornerRadius="50pt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/black"
            app:layout_constraintCircleRadius="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_out"
            app:cornerRadius="50pt"/>


    </LinearLayout>

    </ScrollView>


</FrameLayout>