<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ion_fast_food_sharp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="210dp"
            android:text="@string/login_sub"
            android:textSize="29dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="246dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="46dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/login_id"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:expandedHintEnabled="true"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:singleLine="true"
                android:layout_margin="0dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:textSize="20dp"
                android:nextFocusForward="@string/login_password"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/login_password"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:expandedHintEnabled="true"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginIdLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:lines="1"
                android:layout_margin="0dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            app:layout_constraintCircleRadius="50dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="43dp"
            android:text="@string/sign_in"
            app:cornerRadius="50pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>