<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlaceYourCardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardCornerRadius="50dp"
                android:layout_marginTop="-50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/backgroud">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        app:cardBackgroundColor="@color/light_gray_50"
                        app:cardCornerRadius="75dp">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/colorOnPrimary"
                            app:cardCornerRadius="65dp">
                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/main_billing_info"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="85dp"
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:textColor="@color/black"
                                android:textAllCaps="true"
                                android:text="@string/bill_info"/>
                        </com.google.android.material.card.MaterialCardView>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/place_your_order"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/black"
                app:layout_constraintCircleRadius="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_gravity="bottom"
                android:text="@string/continue_w"
                app:cornerRadius="50pt"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>